[package]
name = "dynamic-leds"
version = "0.1.0"
authors = ["Mike Goddard <mikeygiom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5"
dominant_color = "0.3.0"
btleplug = "0.7.1"
uuid = "0.8"
